提交部分页面

--- a/views/frame_CAN.html
+++ b/views/frame_CAN.html
@@ -40,15 +40,15 @@
     </colgroup>
     <thead class="lightBlue center">
     <tr>
-      <th colspan="4">网络基本信息</th>
+      <th colspan="4">CAN基本信息</th>
     </tr>
     </thead>
     <tbody class="center">
     <tr>
-      <td>IP</td>
-      <td>192.168.1.193</td>
-      <td>端口号</td>
-      <td>8080</td>
+      <td>波特率</td>
+      <td>5K</td>
+      <td>设备索引号</td>
+      <td>0</td>
     </tr>
     </tbody>
   </table>
@@ -69,7 +69,7 @@
       <td>连接设备</td>
       <td>发动机</td>
       <td>数据传输速率</td>
-      <td>1000K/s</td>
+      <td>200K/s</td>
     </tr>
     </tbody>
   </table>
