--- a/views/frame_RS485.html
+++ b/views/frame_RS485.html
@@ -40,15 +40,27 @@
     </colgroup>
     <thead class="lightBlue center">
     <tr>
-      <th colspan="4">网络基本信息</th>
+      <th colspan="4">串口基本信息</th>
     </tr>
     </thead>
     <tbody class="center">
     <tr>
-      <td>IP</td>
-      <td>192.168.1.193</td>
-      <td>端口号</td>
-      <td>8080</td>
+      <td>通信协议</td>
+      <td>2</td>
+      <td>数据位</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>波特率</td>
+      <td>600</td>
+      <td>停止位</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>数据校验位</td>
+      <td>None</td>
+      <td>流控位</td>
+      <td>None</td>
     </tr>
     </tbody>
   </table>
@@ -69,7 +81,7 @@
       <td>连接设备</td>
       <td>发动机</td>
       <td>数据传输速率</td>
-      <td>1000K/s</td>
+      <td>200k/s</td>
     </tr>
     </tbody>
   </table>
