--- a/views/sub_index.html
+++ b/views/sub_index.html
@@ -3,19 +3,19 @@
     <div class="layui-inline">
       <label class="layui-form-label">采样设备</label>
       <div class="layui-input-inline">
-        <input class="layui-input" type="text" autocomplete="off" placeholder="请输入采样设备">
+        <input class="layui-input layui-disabled" type="text" autocomplete="off" placeholder="请输入采样设备" value="">
       </div>
     </div>
     <div class="layui-inline">
       <label class="layui-form-label">采样接口</label>
       <div class="layui-input-inline">
-        <input class="layui-input" type="text" autocomplete="off" placeholder="请输入采样接口">
+        <input class="layui-input layui-disabled" type="text" autocomplete="off" placeholder="请输入采样接口" value="">
       </div>
     </div>
     <div class="layui-inline">
       <label class="layui-form-label">采样频率</label>
       <div class="layui-input-inline">
-        <input class="layui-input" type="text" autocomplete="off" placeholder="请输入频率">
+        <input class="layui-input layui-disabled" type="text" autocomplete="off" placeholder="请输入频率" value="">
       </div>
     </div>
     <div class="layui-inline">
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="layui-form">
-  <table class="layui-table center">
+  <table class="layui-table">
     <thead class="lightBlue center">
     <tr>
       <th colspan="3">采集数据信息</th>
