--- a/views/frame_addUser.html
+++ b/views/frame_addUser.html
@@ -30,50 +30,47 @@
   </style>
 </head>
 <body class="frame">
-<div class="layui-form">
-  <table class="layui-table">
-    <colgroup>
-      <col width="100">
-      <col width="150">
-      <col width="120">
-      <col>
-    </colgroup>
-    <thead class="lightBlue center">
-    <tr>
-      <th colspan="4">网络基本信息</th>
-    </tr>
-    </thead>
-    <tbody class="center">
-    <tr>
-      <td>IP</td>
-      <td>192.168.1.193</td>
-      <td>端口号</td>
-      <td>8080</td>
-    </tr>
-    </tbody>
-  </table>
-  <table class="layui-table">
-    <colgroup>
-      <col width="100">
-      <col width="150">
-      <col width="120">
-      <col>
-    </colgroup>
-    <thead class="lightBlue center">
-    <tr>
-      <th colspan="4">设备连接信息</th>
-    </tr>
-    </thead>
-    <tbody class="center">
-    <tr>
-      <td>连接设备</td>
-      <td>发动机</td>
-      <td>数据传输速率</td>
-      <td>1000K/s</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<form class="layui-form" id="frame_searchForm" action="">
+  <div class="layui-form-item">
+    <label class="layui-form-label">ID</label>
+    <div class="layui-input-inline">
+      <input class="layui-input" lay-verify="required" type="text" autocomplete="off">
+    </div>
+  </div>
+  <div class="layui-form-item">
+    <label class="layui-form-label">姓名</label>
+    <div class="layui-input-inline">
+      <input class="layui-input" lay-verify="required" type="text" autocomplete="off">
+    </div>
+  </div>
+  <div class="layui-form-item">
+    <label class="layui-form-label">昵称</label>
+    <div class="layui-input-inline">
+      <input class="layui-input" lay-verify="required" type="text" autocomplete="off">
+    </div>
+  </div>
+  <div class="layui-form-item">
+    <label class="layui-form-label">密码</label>
+    <div class="layui-input-inline">
+      <input class="layui-input" lay-verify="required" type="text" autocomplete="off">
+    </div>
+  </div>
+  <button class="layui-btn" id="frame_addUser_sub" lay-submit lay-filter="frame_addUser_sub" style="display: none">确定</button>
+</form>
+
+<script>
+  layui.use(['form', 'layedit', 'laydate'], function(){
+    var form = layui.form,layer = layui.layer,laydate = layui.laydate;
+    //表单提交
+    form.on('submit(frame_addUser_sub)', function(data){
+      layer.alert(JSON.stringify(data.field), {
+        title: '最终的提交信息'
+      })
+      layer.closeAll('iframe');//关闭弹窗
+      return false;
+    });
+  })
+</script>
 </body>
 </html>
 
