--- a/views/sub_equipConfig.html
+++ b/views/sub_equipConfig.html
@@ -176,8 +176,13 @@
     </tr>
     </tbody>
   </table>
-  <button class="layui-btn layui-btn-darkBlue" lay-submit lay-filter="equipConfig_sub">立即提交</button>
-  <button class="layui-btn layui-btn-darkBlue" type="reset">取&nbsp;&nbsp;消</button>
+
+  <!--提交取消按钮-->
+  <div class="text_right">
+    <button class="layui-btn layui-btn-darkBlue" lay-submit lay-filter="equipConfig_sub">立即提交</button>
+    <button class="layui-btn layui-btn-darkBlue" type="reset">取&nbsp;&nbsp;消</button>
+  </div>
+
 </form>
 
 <script type="text/javascript">
