--- a/views/sub_userManage.html
+++ b/views/sub_userManage.html
@@ -1,5 +1,5 @@
 <table class="layui-table" id="userManage" style="margin: 0;"></table>
-<div class="tableTool">
+<div class="tableTool text_right">
   <button class="layui-btn layui-btn-darkBlue" data-type="add">添&nbsp;&nbsp;加</button>
   <button class="layui-btn layui-btn-darkBlue" data-type="del">删&nbsp;&nbsp;除</button>
 </div>
