--- a/views/sub_dataManageSet.html
+++ b/views/sub_dataManageSet.html
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta http-equiv="keywords" content="关键字,关键字,关键字"/>
+  <meta http-equiv="pragma" content="no-cache"/>
+  <meta http-equiv="cache-control" content="no-cache"/>
+  <meta http-equiv="expires" content="0"/>
+  <meta name="description" content="页面描述不超过150个字符"/>
+  <meta name="Author" content="页面作者"/>
+  <meta name="renderer" content="webkit"/>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+  <link rel="shortcut icon" href="../public/images/favicon.ico" type="image/x-icon" >
+  <link rel="stylesheet" type="text/css" href="../public/layui/dist/css/layui.css"/>
+  <link rel="stylesheet" href="../public/stylesheets/gx_main.min.css" />
+  <link rel="stylesheet" type="text/css" href="../public/iconfont/iconfont.css">
+  <!--[if lt IE 9]>
+  <script src="../public/html5shiv/dist/html5shiv.min.js"></script>
+  <script src="../public/respond/dest/respond.min.js"></script>
+  <![endif]-->
+  <script src="../public/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../public/layui/dist/layui.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="../public/highcharts-5.0.14/code/highcharts.js"></script>
+  <!--mine-->
+  <script src="../public/javascripts/gx_main.min.js" type="text/javascript" charset="utf-8"></script>
+</head>
+<body class="frame">
+
 <div class="layui-form">
   <table class="layui-table">
     <thead class="lightBlue center">
@@ -29,3 +58,6 @@
     //
   });
 </script>
+
+</body>
+</html>
